--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,58 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+  background-color: #ffffff;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  font-family: Arial, sans-serif;
 }
 
-.App-link {
-  color: #61dafb;
+.App-header {
+  width: 60%;
+  margin: auto;
+  padding: 20px;
+  border-radius: 8px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h2 {
+  margin: 0;
+  font-size: 4rem;
+  color: #333;
+}
+
+p {
+  margin: 10px 0;
+  font-size: 1.5rem;
+  color: green;
+}
+
+.MuiTabs-flexContainer {
+  justify-content: space-between;
+}
+
+.MuiTab-root {
+  font-size: 1rem;
+  color: #000;
+  text-transform: none;
+  min-width: 10%;
+}
+
+.Mui-selected {
+  color: #000000 !important;
+}
+
+.MuiTabs-indicator {
+  background-color: #6200ea;
+}
+
+.MuiTypography-root {
+  font-weight: bold;
+}
+
+span {
+  color: #888;
+  font-size: 1.5rem;
+  font-weight: normal;
 }
